# MtgTools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  doc.yml  update-push.yml
arena_deck/: 2017-09-29_XLN_1C.txt  2017-09-29_XLN_2U.txt  2017-09-29_XLN_3R.txt  2017-09-29_XLN_4M.txt  2018-01-19_RIX_1C.txt  2018-01-19_RIX_2U.txt  2018-01-19_RIX_3R.txt  2018-01-19_RIX_4M.txt  2018-04-27_DOM_1C.txt  2018-04-27_DOM_2U.txt  2018-04-27_DOM_3R.txt  2018-04-27_DOM_4M.txt  2018-10-05_GRN_1C.txt  2018-10-05_GRN_2U.txt  2018-10-05_GRN_3R.txt  2018-10-05_GRN_4M.txt  2019-01-25_RNA_1C.txt  2019-01-25_RNA_2U.txt  2019-01-25_RNA_3R.txt  2019-01-25_RNA_4M.txt  2019-05-03_WAR_1C.txt  2019-05-03_WAR_2U.txt  2019-05-03_WAR_3R.txt  2019-05-03_WAR_4M.txt  2019-10-04_ELD_1C.txt  2019-10-04_ELD_2U.txt  2019-10-04_ELD_3R.txt  2019-10-04_ELD_4M.txt  2020-01-24_THB_1C.txt  2020-01-24_THB_2U.txt  2020-01-24_THB_3R.txt  2020-01-24_THB_4M.txt  2020-04-24_IKO_1C.txt  2020-04-24_IKO_2U.txt  2020-04-24_IKO_3R.txt  2020-04-24_IKO_4M.txt  2020-08-13_AKR_1C.txt  2020-08-13_AKR_2U.txt  2020-08-13_AKR_3R.txt  2020-08-13_AKR_4M.txt  (+184 more)
docs/: index.html
docs/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
docs/doc/MtgTools/: all.html  fn.main.html  index.html  sidebar-items.js
docs/doc/MtgTools/api/: index.html  sidebar-items.js  struct.Bulk.html  struct.Card.html  struct.List.html  struct.Set.html
docs/doc/mtg/: all.html  fn.main.html  index.html  sidebar-items.js
src/: api.rs  common.rs  deck.rs  download.rs  info.rs  main.rs
(+100 files in other folders)
