[package]
name = "mtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
getopts = "0.2.21"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
