[package]
name = "MtgTools"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/yappy/MtgTools"
homepage = "https://github.com/yappy/MtgTools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
getopts = "0.2.21"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
reqwest = { version = "0.11", features = ["blocking", "json"] }
